--- a/index.html
+++ b/index.html
@@ -39,9 +39,8 @@
 
     <link rel="stylesheet" href="css/style-app.css">
 
+    <script src="js/todos.js"></script>
     <script src="js/app.js"></script>
 
 
-</body>
-
-</html>
+</body></html>
