--- a/index.html
+++ b/index.html
@@ -11,19 +11,16 @@
     <div id="app">
         <section class="todoapp">
             <header class="header">
-                <h1>Todo List App</h1><input id="new-todo" class="new-todo" placeholder="What needs to be done?" autofocus="">
+                <h1>Todo List App</h1><input id="new-todo" class="new-todo" placeholder="Type Todos here and press ENTER" autofocus="">
             </header>
             <section class="main" id="main" style="display:block"><input id="toggle-all" type="checkbox" class="toggle-all"><label for="toggle-all">Mark all as complete</label>
 
                 <!-- todo List-->
                 <ul class="todo-list">
 
-                    <li data-id="4" id="4" class="completed">
+                    <!-- <li data-id="4" id="4" class="completed">
                         <div class="view"><input checked="true" class="toggle" type="checkbox"><label>read adkar</label><button class="destroy"></button></div>
-                    </li>
-                    <li data-id="5" id="5">
-                        <div class="view"><input class="toggle" type="checkbox"><label>go masjid</label><button class="destroy"></button></div>
-                    </li>
+                    </li> -->
 
                 </ul>
             </section>
