--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <header class="header">
                 <h1>Todo List App</h1><input id="new-todo" class="new-todo" placeholder="Type Todos here and press ENTER" autofocus="">
             </header>
-            <section class="main" id="main" style="display:block"><input id="toggle-all" type="checkbox" class="toggle-all"><label for="toggle-all">Mark all as complete</label>
+            <section class="main" id="main" ><input id="toggle-all" type="checkbox" class="toggle-all"><label for="toggle-all">Mark all as complete</label>
 
                 <!-- todo List-->
                 <ul class="todo-list">
@@ -24,7 +24,7 @@
 
                 </ul>
             </section>
-            <footer class="footer" id="footer" style="display:block"><span class="todo-count"><strong id="count"></strong> Pending</span>
+            <footer class="footer" id="footer"><span class="todo-count"><strong id="count"></strong> Pending</span>
                 <ul class="filters">
                     <li><a href="#/" id="all" class="selected">All</a></li>
                     <li><a href="#/active" id="active" class="">Active</a></li>
